Previous commit did not prevent horizontal scrolling, trying to target html element with this

--- a/style.css
+++ b/style.css
@@ -8,6 +8,11 @@ body {
     overflow-x: hidden; /* Prevent horizontal scrolling */
 }
 
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 /* First page image */
 .header {
     min-height: 100vh;
